--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Interactive Design</title>
+    <title>Software Lab</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- <meta http-equiv="Content-type" content="text/html;charset=UTF-8"> -->
@@ -37,7 +37,7 @@
 
     <div class="menu-top-left">
       <button class="menu-index font-menu" onclick="location.href='index.html'" type="button">
-        Interactive Design
+        Software Lab
       </button>
       <button id="row4" class="menu-btn font-menu" onclick="menuSyllabus()" type="button">
         Syllabus
@@ -51,22 +51,22 @@
       <button id="row2" class="menu-btn font-menu" type="button">
         ❸
       </button>
-      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://docs.google.com/document/d/1uO0cSqWumfzX0xnk32F8KPwhYwlUNJMETi3m843V14w/edit?usp=sharing', '_blank');" type="button">
+      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://docs.google.com/document/d/173ZGpF4ye7bMUJd7kTXvR8bxMRTiZOxDMs4KfTP-bEU/edit?usp=sharing', '_blank');" type="button">
         Sign-up
       </button>
       <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://calendly.com/lee-halim/30min', '_blank');" type="button">
         Office Hours
       </button>
-      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://bu-interactivedesign.slack.com', '_blank');" type="button">
+      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://softwarelabfall25.slack.com', '_blank');" type="button">
         Slack
       </button>
-      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://drive.google.com/drive/folders/1pJLxaxUNxbvywDHGYk8qQnAiuAg_SzZF?usp=drive_link', '_blank');" type="button">
+      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://drive.google.com/drive/folders/1a92xWKA5aVoj2gB_K9ztt8zuXbDFy_MJ?usp=drive_link', '_blank');" type="button">
         G-Drive
       </button>
-      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://www.are.na/fall-2025-bu-interactive-design/collaborative-codebox', '_blank');" type="button">
+      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://www.are.na/fall-2025-bu-software-lab/collaborative-toolbox', '_blank');" type="button">
         Are.na
       </button>
-      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://docs.google.com/spreadsheets/d/1ie_V2OpEVamJjUSMl9ZzlGpnBHShv2NllxiKWa7iQUk/edit?usp=sharing', '_blank');" type="button">
+      <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://docs.google.com/spreadsheets/d/1hRa8DWvVIKkvG-Axrd35HHTqedfEANEp_zuHs-6_TfE/edit?usp=sharing', '_blank');" type="button">
         Attendance
       </button>
     </div>
@@ -149,8 +149,7 @@
           </div>
           <!-- --------------------------------------------------------------- -->
           <div id="p4_terra_2">
-            <iframe class="col-arena-R" src="arena/class_note.html"></iframe>
-            <!-- <iframe class="col-arena-R" src="arena/class_resource.html"></iframe> -->
+            <iframe class="col-arena-R" src="arena/class_resource.html"></iframe>
           </div>
           <!-- --------------------------------------------------------------- -->
         </div>
@@ -185,14 +184,14 @@
               <h3 style="text-indent: 0px;">
                 <div>
                   <h3>
-                    BU Fall 2026 | Interactive Design
+                    BU Fall 2025 | Software Lab
                   </h3>
                 </div>
               </h3>
               <h3 style="text-indent: 0px;">
                 <div>
                   <h3>
-                    CFA AR 589 | Credits 2
+                    CFA AR 535 Z | Credits 2
                   </h3>
                 </div>
               </h3>
@@ -227,7 +226,7 @@
                     </ul>
                     <ul>
                       <li>
-                        Fri 5:30 — 7:30 pm<br>
+                        Thu 6:20 — 8:20 pm<br>
                         by appointment
                       </li>
                     </ul>
@@ -248,7 +247,7 @@
                     </ul>
                     <ul>
                       <li>
-                        Fri 2:30 — 5:15 PM
+                        Wed 6:30 — 9:15 PM
                       </li>
                       <li>
                         Room 410, 808 Building
@@ -264,8 +263,8 @@
                       </li>
                     </ul>
                     <ul class="bulletS">
-                      <li class="link"><a href = "https://nienko.com/" target="_blank">Kelly Thomas (She/ They)</a></li>
-                      <li class="link"><a href = "mailto: kjt32@bu.edu">kjt32@bu.edu</a></li>
+                      <li class="link"><a href = "https://nienko.com/" target="_blank">Sophia Kornienko (She/ Her)</a></li>
+                      <li class="link"><a href = "mailto: nienko@bu.edu">nienko@bu.edu</a></li>
                     </ul>
                   </h3>
                 </div>
@@ -280,15 +279,15 @@
               <div>
                 <h3>Description</h3>
                 <h4>
-                  This course opens the door to different ways of thinking and making forms, and adding interactivity through computer programming, and looks at how it can be used for creative projects by creating a new context or extending what we already know. Class time will be split between lectures, work sessions, discussions, presentations, and critiques.
+                  The use of new software plays an important role in expanding our visual vocabulary and ideas, creating more opportunities in graphic design. "Software Lab" is an experimental laboratory that explores the potential of various digital applications. This course consists of several small workshops designed to help you explore diverse programs, as well as three main projects. You are encouraged to play, take risks, and experiment boldly with newly learned tools as you discover and develop your own design approach.
                 </h4><br><br>
 
                 <h3>Learning Outcomes</h3>
                 <h4><ul class="bullet">
-                  <li>Become familiar with basic programming languages and emerging interactive tools</li>
-                  <li>Learn how to amplify key project concepts through interaction</li>
-                  <li>Explore innovative approaches to advance creative projects</li>
-                  <li>Understand the foundational principles of user interface design</li>
+                  <li>Explore and learn emerging software to gain new skills and inspiration</li>
+                  <li>Develop the ability to use software in bold and experimental ways</li>
+                  <li>Gain a deeper understanding of the potential of new software and its impact on design</li>
+                  <li>Learn how to collaboratively build a rich tool archive as a shared resource</li>
                 </ul></h4><br>
 
                 <h3>Courseware</h3>
@@ -340,27 +339,27 @@
               <!-- --------------------------------------------------------------- -->
 
               <div>
-                <h3>🄋 Collaborative Codebox</h3>
+                <h3>🄋 Collaborative Toolbox</h3>
                 <h4>
-                  Knowing what is feasible in programming greatly expands the range of ideas you can explore in your projects. Interactive Design is a collaborative space where every class member supports one another. To grow our coding knowledge, we will operate a Collaborative Codebox Are.na channel. Each member will sign up for a date and share five code-related resources they find interesting or new. These resources will be posted on the Are.na channel so that everyone can use them as assets for future projects. The five resources can be anything you think will be helpful to yourself and the class. For example, they could be an online CSS generator, a new JavaScript library, a sample code snippet you discovered on CodePen, or even an AI code generation tool.
+                  Playing with new and different software helps us expand our visual vocabulary and creative ideas. The Software Lab is a collaborative space where all members experiment together using new tools. To expand our toolbox archive, we will operate a Collaborative Toolbox Arena channel. Each member will sign up for a date and introduce five tools they find interesting. These tools will be shared on the Arena channel so that everyone can use them as assets for future projects. The five tools can include graphic design tools, motion graphics tools, 3D tools, AI tools, typeface creation tools, writing tools, or any other tools we commonly use in our work.
                 </h4><br><br>
                 <hr><br><br>
 
-                <h3>➊ Interactive Poster</h3>
+                <h3>➊ Proto—Type</h3>
                 <h4>
-                  Interactivity is a key strength of digital media. This project explores how web-based interaction can reimagine traditional print media and foster deeper engagement. Using HTML, CSS, and JavaScript, you will learn techniques ranging from basic CSS media queries to more dynamic interactions such as sound detection and machine learning, and apply them to design an online interactive poster. The interactions you learn in workshops should meaningfully enhance your poster’s idea and concept.
+                  Using one or more typeface creation tools, create a new typeface. The focus is on experimental and playful design, rather than producing a fully polished typeface. Consider creating modular, color, or variable fonts, and give your typeface a name. The typeface you create will be used as the title for the second project, Re:Place, so it is encouraged to design a type that connects conceptually with Re:Place.
                 </h4><br><br>
                 <hr><br><br>
 
-                <h3>➋ Digital Narrative</h3>
+                <h3>➋ Re—Place</h3>
                 <h4>
-                  Based on the workshops from Project 1, you will create a single-page web zine (or multiple pages if you are comfortable with programming). The choice of text and its length are entirely up to you—it can be something you’ve written before or a new piece you would like to explore. It is important to apply interactions that suit your text in order to strengthen the narrative and create a more engaging experience for the reader. You are encouraged to use interactions that were not included in Project 1, or to combine multiple interactions together.
+                  Reimagine a place that is meaningful to you in a digital space. This could be your hometown that you’ve left behind, a place belonging to someone you love, or even a virtual space you’ve long imagined. What form could it take in a digital environment, and what new meanings might emerge? Tools for creating 3D interactive spaces will be introduced during the workshop. For your project, you may use these tools or any others you prefer. (Learning 3D tools in the workshop does not mean your final project must be in 3D.)
                 </h4><br><br>
                 <hr><br><br>
 
-                <h3>❸ Moments Online</h3>
+                <h3>❸ Between Worlds</h3>
                 <h4>
-                  The internet is not a fixed medium. In Project 3, you will create a website that functions or appears only at specific moments. As the final project of Interactive Design, your work can take any form—for example, another interactive zine, a web-based performance, a music video, or a poetic website with other creative ideas—offering more freedom than Projects 1 and 2. While workshops on time-based interactions and additional body detection will be provided, you are encouraged to freely apply any other interactions to create a website that responds to the “Moments Online” prompt.
+                  As the final project of the Software Lab, we will explore the conversation between the physical and digital worlds. What meanings can emerge when physical actions intervene in the digital? Web programming workshops for building digital spaces will be included. For physical interactions, you are encouraged to bring creative and diverse ideas that can connect with digital spaces to your project.
                 </h4><br>
 
               </div>
