--- a/schedule_w/weekly_p1.html
+++ b/schedule_w/weekly_p1.html
@@ -20,18 +20,18 @@
 
 <body>
   <div class="h-top"></div>
-  <a href="https://www.are.na/bu-interactive-design/26s_inter-schedule" target="_blank">
-    <h1>➊ Interactive Poster</h1>
+  <a href="https://www.are.na/fall-2025-bu-grad-2-gd/soft-schedule" target="_blank">
+    <h1>➊ ProtoType</h1>
   </a>
   <p>
-    Interactivity is a key strength of digital media. This project explores how web-based interaction can reimagine traditional print media and foster deeper engagement. Using HTML, CSS, and JavaScript, you will learn techniques ranging from basic CSS media queries to more dynamic interactions such as sound detection and machine learning, and apply them to design an online interactive poster. The interactions you learn in workshops should meaningfully enhance your poster’s idea and concept.
+    Using one or more typeface creation tools, create a new typeface. The focus is on experimental and playful design, rather than producing a fully polished typeface. Consider creating modular, color, or variable fonts, and give your typeface a name. The typeface you create will be used as the title for the second project, Re:Place, so it is encouraged to design a type that connects conceptually with Re:Place.
     <br><br><br>
   </p>
-  <a href="https://www.are.na/bu-interactive-design/26s_inter-schedule" target="_blank">
-    <h1>➋ Digital Narrative</h1>
+  <a href="https://www.are.na/fall-2025-bu-grad-2-gd/soft-schedule" target="_blank">
+    <h1>➋ Re:Place</h1>
   </a>
   <p>
-    Based on the workshops from Project 1, you will create a single-page web zine (or multiple pages if you are comfortable with programming). The choice of text and its length are entirely up to you—it can be something you’ve written before or a new piece you would like to explore. It is important to apply interactions that suit your text in order to strengthen the narrative and create a more engaging experience for the reader. You are encouraged to use interactions that were not included in Project 1, or to combine multiple interactions together.
+    Reimagine a place that is meaningful to you in a digital space. This could be your hometown that you’ve left behind, a place belonging to someone you love, or even a virtual space you’ve long imagined. What form could it take in a digital environment, and what new meanings might emerge? Tools for creating 3D interactive spaces will be introduced during the workshop. For your project, you may use these tools or any others you prefer. (Learning 3D tools in the workshop does not mean your final project must be in 3D.)
     <br><br><br>
   </p>
 
@@ -53,7 +53,7 @@
   <div class="ScrollMaker" style="position: absolute; top: 0; width: 0; height: calc(100% + 10px);"></div>
 
   <script>
-    let slug = '26s_inter-schedule-p1';
+    let slug = 'soft-schedule-p1';
   </script>
   <script type="text/javascript" src="weekly.js"></script>
 </body>
