--- a/arena/class_note.html
+++ b/arena/class_note.html
@@ -31,7 +31,7 @@
   <div class="ChannelContents"></div>
   <div class="ScrollMaker" style="position: absolute; top: 0; width: 0; height: calc(100% + 10px);"></div>
 
-  <script>let slug = 'collaborative-codebox';</script>
+  <script>let slug = 'collaborative-toolbox';</script>
   <script type="text/javascript" src="class_note.js"></script>
 </body>
   
