--- a/schedule_w/weekly.html
+++ b/schedule_w/weekly.html
@@ -27,7 +27,7 @@
     <br>
   </div> -->
   
-  <a href="https://www.are.na/bu-interactive-design/26s_inter-schedule" target="_blank">
+  <a href="https://www.are.na/fall-2025-bu-grad-2-gd/soft-schedule" target="_blank">
     <h1>⌘ Full Schedule & Resources</h1>
   </a>
 
@@ -49,7 +49,7 @@
   <div class="ScrollMaker" style="position: absolute; top: 0; width: 0; height: calc(100% + 10px);"></div>
 
   <script>
-    let slug = '26s_inter-schedule';
+    let slug = 'soft-schedule';
   </script>
   <script type="text/javascript" src="weekly.js"></script>
 </body>
