--- a/schedule_w/weekly_p3.html
+++ b/schedule_w/weekly_p3.html
@@ -20,11 +20,11 @@
 
 <body>
   <div class="h-top"></div>
-  <a href="https://www.are.na/bu-interactive-design/26s_inter-schedule" target="_blank">
-    <h1>❸ Moments Online</h1>
+  <a href="https://www.are.na/fall-2025-bu-grad-2-gd/soft-schedule" target="_blank">
+    <h1>❸ Between Worlds</h1>
   </a>
   <p>
-    The internet is not a fixed medium. In Project 3, you will create a website that functions or appears only at specific moments. As the final project of Interactive Design, your work can take any form—for example, another interactive zine, a web-based performance, a music video, or a poetic website with other creative ideas—offering more freedom than Projects 1 and 2. While workshops on time-based interactions and additional body detection will be provided, you are encouraged to freely apply any other interactions to create a website that responds to the “Moments Online” prompt.
+    As the final project of the Software Lab, we will explore the conversation between the physical and digital worlds. What meanings can emerge when physical actions intervene in the digital? Web programming workshops for building digital spaces will be included. For physical interactions, you are encouraged to bring creative and diverse ideas that can connect with digital spaces to your project.
     <br><br><br>
   </p>
 
@@ -46,7 +46,7 @@
   <div class="ScrollMaker" style="position: absolute; top: 0; width: 0; height: calc(100% + 10px);"></div>
 
   <script>
-    let slug = '26s_inter-schedule-p2';
+    let slug = 'soft-schedule-p3';
   </script>
   <script type="text/javascript" src="weekly.js"></script>
 </body>
